<?xml version="1.0" encoding="utf-8"?>
<!-- COMP 3450: Riley Hall, Nathan Chorlton, Martin Atanacio -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_add">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="51dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/add_db"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databaseName" />

    <EditText
        android:id="@+id/databaseName"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/db_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>